--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,35 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+= README
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+== Install Ruby
+  brew update
+  brew install rbenv ruby-build
+  rbenv install -l
+  rbenv install 2.1.5
+
+== Install dependencies
+  cd account_layer
+  bundle
+
+== Initialize Database
+  # edit config/database.yml if you like, then
+  bin/rake db:setup
+
+== Configure
+include 2 variables in the file .env 
+  GOOGLE_CLIENT_ID="your client id"
+  GOOGLE_CLIENT_SECRET="your client secret"
+or ask Matt for his ones, configured for localhost:3000.
+
+== Run tests
+=== Run once
+  bundle exec rspec
+
+=== Run continuously
+bundle exec guard start
+
+== Server (job queues, cache servers, search engines, etc.)
+foreman start
+
+== Deployment instructions
+
