--- a/README.rdoc
+++ b/README.rdoc
@@ -12,7 +12,8 @@
 
 == Initialize Database
   # edit config/database.yml if you like, then
-  bin/rake db:setup
+  bin/rake db:create db:structure:load db:seed_account_types db:seed
+  RAILS_ENV=test bin/rake db:seed_account_types
 
 == Configure
 include 2 variables in the file .env 
