--- a/README.rdoc
+++ b/README.rdoc
@@ -21,8 +21,7 @@
 
 == Initialize Database
   # edit config/database.yml if you like, then
-  bin/rake db:create db:structure:load db:seed_account_types db:seed
-  RAILS_ENV=test bin/rake db:seed_account_types
+  bin/rake db:setup
 
 == Configure
 include 2 variables in the file .env 
