--- a/README.rdoc
+++ b/README.rdoc
@@ -22,6 +22,7 @@
 == Initialize Database
   # edit config/database.yml if you like, then
   bin/rake db:setup
+  RAILS_ENV=test bin/rake db:setup
 
 == Configure
 include 2 variables in the file .env 
