--- a/README.rdoc
+++ b/README.rdoc
@@ -22,8 +22,8 @@
 
 == Initialize Database
   # edit config/database.yml if you like, then
-  bin/rake db:setup
-  RAILS_ENV=test bin/rake db:setup
+  bin/rake db:setup db:seed
+  RAILS_ENV=test bin/rake db:setup db:seed
 
 == Configure
 include 2 variables in the file .env 
